{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 40,
  "lineage": "b508bd36-1060-a735-c4d7-719c6b9df4a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:397085766306:loadbalancer/app/loadbalance/ea394f945a2b9400",
            "arn_suffix": "app/loadbalance/ea394f945a2b9400",
            "dns_name": "loadbalance-1359581832.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:397085766306:loadbalancer/app/loadbalance/ea394f945a2b9400",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadbalance",
            "security_groups": [
              "sg-4af9fb00"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-4c05b316"
              },
              {
                "subnet_id": "subnet-cf1277a9"
              }
            ],
            "subnets": [
              "subnet-4c05b316",
              "subnet-cf1277a9"
            ],
            "tags": {
              "env": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-6603a800",
            "zone_id": "Z368ELLRRE2KJ0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:397085766306:listener/app/loadbalance/ea394f945a2b9400/7b980cae567bb105",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:397085766306:targetgroup/tf-example-lb-tg/e4b258fd7b4b56e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:397085766306:listener/app/loadbalance/ea394f945a2b9400/7b980cae567bb105",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:397085766306:loadbalancer/app/loadbalance/ea394f945a2b9400",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_target_group.target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:397085766306:targetgroup/tf-example-lb-tg/e4b258fd7b4b56e4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:397085766306:listener-rule/app/loadbalance/ea394f945a2b9400/7b980cae567bb105/be62fafb58f77940",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:397085766306:listener-rule/app/loadbalance/ea394f945a2b9400/7b980cae567bb105/be62fafb58f77940",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:397085766306:listener/app/loadbalance/ea394f945a2b9400/7b980cae567bb105",
            "priority": 100
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_listener.listener",
            "aws_lb_target_group.target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:397085766306:targetgroup/tf-example-lb-tg/e4b258fd7b4b56e4",
            "arn_suffix": "targetgroup/tf-example-lb-tg/e4b258fd7b4b56e4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:397085766306:targetgroup/tf-example-lb-tg/e4b258fd7b4b56e4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-6603a800"
          }
        }
      ]
    }
  ]
}